--- a/src/sass/bootstrap/_variables.scss
+++ b/src/sass/bootstrap/_variables.scss
@@ -428,6 +428,7 @@ $zindex-navbar:             1000 !default;
 $zindex-dropdown:           1000 !default;
 $zindex-drawer-backdrop:    1020 !default;
 $zindex-navbar-fixed:       1030 !default;
+$zindex-affix:              1031 !default;
 $zindex-drawer-fixed:       1031 !default;
 $zindex-alert-dismissable:  1032 !default;
 $zindex-modal-background:   1040 !default;
